[workspace]
resolver = "2"
members = [
  "geosuggest",
  "geosuggest-core",
  "geosuggest-utils",
  "geosuggest-demo",
  "examples",
]

[workspace.package]
version = "0.6.0"
authors = ["geosuggest contributors"]
license = "MIT"

[workspace.dependencies]
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
test-log           = { version = "0.2", default-features = false, features = ["trace"] }

# core
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
config     = "0.14"
csv        = "1"
rayon      = "1"
strsim     = "0.11"
kiddo      = { version = "4.1", features = ["immutable"] }
geoip2     = "0.1.6"

bincode   = "1.3.3"
itertools = "0.12"

# service
oaph       = { version = "0.1" }
ntex       = { version = "1.0", features=["tokio"] }
ntex-files = "0.4"
ntex-cors  = "0.5"

# utils
zip = "0.6"
reqwest = { version = "0.11", features = [
  "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
