[workspace]
resolver = "2"
members = [
  "geosuggest",
  "geosuggest-*",
]

[workspace.package]
version = "0.8.2"
authors = ["geosuggest contributors"]
license = "MIT"

[workspace.dependencies]
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
test-log           = { version = "0.2", default-features = false, features = ["trace"] }

# core
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
config     = "0.15"
csv        = "1"
rayon      = "1"
strsim     = "0.11"
kiddo      = { version = "5.2", default-features = false, features = ["rkyv_08"] }
geoip2     = "0.1.7"

rkyv      = { version = "0.8" }
itertools = "0.14"

# service
oaph       = { version = "0.2" }
ntex       = { version = "2", features=["tokio"] }
ntex-files = "2"
ntex-cors  = "3"

# utils
zip = "6"
reqwest = { version = "0.12", features = [
  "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
