[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "simple"
path = "src/simple.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

geosuggest-core = { path = "../geosuggest-core" }
geosuggest-utils = { path = "../geosuggest-utils" }
