[package]
name = "geosuggest-core"
version = "0.1.7"
edition = "2021"

[features]
default = []
oaph_support = ["oaph"]
geoip2_support = ["geoip2"]

[dependencies]
tracing.workspace = true
csv.workspace = true
serde.workspace = true
rayon.workspace = true
strsim.workspace = true
kiddo.workspace = true
serde_json.workspace = true
bincode.workspace = true
itertools.workspace = true

geoip2 = { workspace = true, optional = true}
oaph = { workspace = true, optional = true }

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
