[package]
name = "geosuggest-core"
version = "0.5.1"
authors = ["geosuggest contributors"]
description = "Suggest by name or find nearest by coordinates cities"
readme = "README.md"
keywords = ["geocoding", "service"]
repository = "https://github.com/estin/geosuggest.git"
documentation = "https://docs.rs/geosuggest-core/"
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2021"

[features]
default = []
oaph_support = ["oaph"]
geoip2_support = ["geoip2"]
tracing = ["dep:tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
csv.workspace = true
serde.workspace = true
rayon.workspace = true
strsim.workspace = true
kiddo.workspace = true
serde_json.workspace = true
bincode.workspace = true
itertools.workspace = true

geoip2 = { workspace = true, optional = true}
oaph = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
geosuggest-utils = { path = "../geosuggest-utils" }
