[package]
name = "geosuggest-core"
version.workspace = true
authors.workspace = true
description = "Suggest by name or find nearest by coordinates cities"
readme = "README.md"
keywords = ["geocoding", "service"]
repository = "https://github.com/estin/geosuggest.git"
documentation = "https://docs.rs/geosuggest-core/"
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2021"

[features]
default = []
oaph = ["dep:oaph"]
geoip2 = ["dep:geoip2"]
tracing = ["dep:tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
csv.workspace = true
serde.workspace = true
rayon.workspace = true
strsim.workspace = true
kiddo.workspace = true
rkyv.workspace = true
rkyv07.workspace = true
itertools.workspace = true

geoip2 = { workspace = true, optional = true}
oaph = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
geosuggest-utils = { path = "../geosuggest-utils" }
