[package]
name = "geosuggest-demo"
version = "0.1.2"
edition = "2021"

[dependencies]
web-sys = "0.3.56"
wasm-bindgen = "0.2.79"
sycamore = { version = "0.8.1", features = ["suspense"]}

reqwasm = "0.5.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"

console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
