[package]
name = "geosuggest-demo"
version = "0.4.2"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true

web-sys = "0.3.69"
wasm-bindgen = "0.2.92"
sycamore = { version = "0.8.2", features = ["suspense"]}

reqwasm = "0.5.0" 
serde_qs = "0.13"

console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
log = "0.4.21"
