[package]
name = "geosuggest-utils"
version = "0.1.1"
edition = "2021"

[features]
default = ["tokio"]
tokio = ["ntex/tokio"]
cli = ["clap"]

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "geosuggest-build-index"
path = "src/build-index.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
ntex.workspace = true
zip.workspace = true
reqwest.workspace = true

geosuggest-core = { path = "../geosuggest-core" }

clap = { version = "4.3", optional = true, features=["derive"] }
