[package]
name = "geosuggest-utils"
version = "0.3.0"
authors = ["geosuggest contributors"]
description = "Suggest by name or find nearest by coordinates cities"
readme = "README.md"
keywords = ["geocoding", "service"]
repository = "https://github.com/estin/geosuggest.git"
documentation = "https://docs.rs/geosuggest-utils/"
categories = ["web-programming::http-server",
              "development-tools"]
license = "MIT"
edition = "2021"

[features]
default = []
cli = ["clap"]

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "geosuggest-build-index"
path = "src/build-index.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
zip.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
clap = { workspace = true, optional = true }

geosuggest-core = { path = "../geosuggest-core", version = "0.3" }
