[package]
name = "geosuggest-utils"
version.workspace = true
authors.workspace = true
description = "Geosuggest index update utilities"
readme = "README.md"
keywords = ["geocoding", "service"]
repository = "https://github.com/estin/geosuggest.git"
documentation = "https://docs.rs/geosuggest-utils/"
categories = ["web-programming::http-server",
              "development-tools"]
license = "MIT"
edition = "2021"

[features]
default = []
cli = ["clap"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "geosuggest-core/tracing"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "geosuggest-build-index"
path = "src/build-index.rs"
required-features = ["clap"]

[dependencies]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true } 
anyhow.workspace = true
zip.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
clap = { workspace = true, optional = true }

geosuggest-core = { path = "../geosuggest-core", version = "0.6" }
