[package]
name = "geosuggest"
version = "0.4.1"
authors = ["geosuggest contributors"]
description = "Suggest by name or find nearest by coordinates cities"
readme = "README.md"
keywords = ["geocoding", "service"]
repository = "https://github.com/estin/geosuggest.git"
documentation = "https://docs.rs/geosuggest/"
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2021"

default-run = "geosuggest"

[[bin]]
name = "geosuggest"
path = "src/main.rs"

[features]
default = ["tokio", "geoip2_support", "tracing"]
geoip2_support = ["geosuggest-core/geoip2_support"]
glommio = ["ntex/glommio"]
tokio = ["ntex/tokio"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "geosuggest-core/tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
serde.workspace = true
ntex.workspace = true
ntex-files.workspace = true
ntex-cors.workspace = true
config.workspace = true

geosuggest-core = { path = "../geosuggest-core", version = "0.4", features = ["oaph_support"] }

# openapi3
oaph.workspace = true 

[dev-dependencies]
serde_json = "1"
test-log.workspace = true