[package]
name = "geosuggest"
version.workspace = true
authors.workspace = true
description = "HTTP service to suggest cities by name or find nearest by coordinates"
readme = "README.md"
keywords = ["geocoding", "service"]
repository = "https://github.com/estin/geosuggest.git"
documentation = "https://docs.rs/geosuggest/"
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2021"

default-run = "geosuggest"

[[bin]]
name = "geosuggest"
path = "src/main.rs"

[features]
default = ["tokio", "geoip2", "tracing"]
geoip2 = ["geosuggest-core/geoip2"]
neon = ["ntex/neon"]
tokio = ["ntex/tokio"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "geosuggest-core/tracing"]

[dependencies]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
serde.workspace = true
ntex.workspace = true
ntex-files.workspace = true
ntex-cors.workspace = true
config.workspace = true

geosuggest-core = { path = "../geosuggest-core", version = "0.7", features = ["oaph"] }

# openapi3
oaph.workspace = true 

[dev-dependencies]
serde_json = "1"
test-log.workspace = true
